package Objetos;

public class Pocion {

    public Pocion(){

    }
}
